# ChangeLog for dev-perl/libwww-perl
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.109 2009/07/29 20:42:39 tove Exp $

*libwww-perl-5.830 (29 Jul 2009)

  29 Jul 2009; Torsten Veller <tove@gentoo.org> +libwww-perl-5.830.ebuild:
  Version bump

  19 Jul 2009; Torsten Veller <tove@gentoo.org> libwww-perl-5.805.ebuild,
  libwww-perl-5.829.ebuild:
  IO-Compress replaces Compress-Zlib

  16 Jul 2009; Torsten Veller <tove@gentoo.org> -libwww-perl-5.826.ebuild,
  -libwww-perl-5.827.ebuild, -libwww-perl-5.828.ebuild:
  Cleanup

*libwww-perl-5.829 (09 Jul 2009)

  09 Jul 2009; Torsten Veller <tove@gentoo.org> +libwww-perl-5.829.ebuild:
  Version bump

*libwww-perl-5.828 (26 Jun 2009)

  26 Jun 2009; Torsten Veller <tove@gentoo.org> +libwww-perl-5.828.ebuild:
  Version bump

*libwww-perl-5.827 (16 Jun 2009)

  16 Jun 2009; Torsten Veller <tove@gentoo.org> +libwww-perl-5.827.ebuild:
  Version bump

  03 Jun 2009; Torsten Veller <tove@gentoo.org> -libwww-perl-5.825.ebuild:
  Cleanup

*libwww-perl-5.826 (25 Apr 2009)

  25 Apr 2009; Torsten Veller <tove@gentoo.org> +libwww-perl-5.826.ebuild:
  Version bump

  26 Mar 2009; Raúl Porcel <armin76@gentoo.org> libwww-perl-5.805.ebuild,
  libwww-perl-5.825.ebuild:
  m68k love, thanks to kolla for testing

  13 Mar 2009; Torsten Veller <tove@gentoo.org> -libwww-perl-5.822.ebuild,
  -libwww-perl-5.823.ebuild:
  Cleanup

*libwww-perl-5.825 (16 Feb 2009)

  16 Feb 2009; Torsten Veller <tove@gentoo.org> -libwww-perl-5.824.ebuild,
  +libwww-perl-5.825.ebuild:
  Version bump. Cleanup

*libwww-perl-5.824 (15 Feb 2009)

  15 Feb 2009; Torsten Veller <tove@gentoo.org> +libwww-perl-5.824.ebuild:
  Version bump

*libwww-perl-5.823 (13 Jan 2009)

  13 Jan 2009; Robin H. Johnson <robbat2@gentoo.org>
  +libwww-perl-5.823.ebuild:
  Version bump via perl-bump experimental tool.

  30 Dec 2008; Torsten Veller <tove@gentoo.org> -libwww-perl-5.820.ebuild,