@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/libwww-perl
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.109 2009/07/29 20:42:39 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/libwww-perl/ChangeLog,v 1.110 2009/08/15 13:16:43 tove Exp $
+
+*libwww-perl-5.831 (15 Aug 2009)
+
+  15 Aug 2009; Torsten Veller <tove@gentoo.org> +libwww-perl-5.831.ebuild:
+  Version bump
 
 *libwww-perl-5.830 (29 Jul 2009)
 
